Fix resident overflow

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -55,7 +55,7 @@
   font-size: 1.1em;
   flex-wrap: wrap;
   padding-left: .5em;
-  width: 100%;
+  width: 99%;
   overflow-wrap: break-word;
 
 }
